# adventofcode2022

./: CMakeLists.txt  README.md
aoc/: CMakeLists.txt
aoc/src/: day_eigth.cpp  day_eleven.cpp  day_five.cpp  day_four.cpp  day_nine.cpp  day_one.cpp  day_seven.cpp  day_six.cpp  day_ten.cpp  day_three.cpp  day_two.cpp  main.cpp
aoc/src/utility/: split.h
input_files/: input_day7_test.txt
